# ft_dslr

./: .gitignore  .pre-commit-config.yaml  README.md  lint.sh  pyproject.toml  requirements.txt
src/: calculate_result.py  describe.py  histogram.py  logistic_regression.py  logreg_predict.py  logreg_train.py  multiclass_regression.py  pair.py  scatter.py
test/: test_describe.py  test_logreg_train.py
