[tool.poetry]
name = "ft-dslr"
version = "0.1.0"
description = ""
authors = ["Rutger Cappendijk <rutgercappendijk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.2.2"
pandas = "^2.2.2"
numpy = "^1.26.4"
prettytable = "^3.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
